force/src/objects/Criteria_Match__c.object
<CustomObject>
    <fields>
        <fullName>Alerts_and_Notifications__c</fullName>
        <label>Alerts and Notifications</label>
        <referenceTo>Alerts_and_notification__c</referenceTo>
        <relationshipLabel>Criteria Matches</relationshipLabel>
        <relationshipName>Criteria_Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic__c</fullName>
        <label>Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Criteria Match</label>
    <nameField>
        <label>Criteria Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>